# Clock

my_clock/: CMakeLists.txt  Main.qml  currenttime.cpp  currenttime.h  main.cpp
